[tool.poetry]
name = "diffusion_suppression"
version = "0.1.0"
description = ""
authors = ["atsushi-wakamatsu <1106Wkm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.21"
networkx = "^2.6.3"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
